<resources>
    <string name="app_name">Study With Me</string>

    <!-- Landing Page -->
    <string name="welcome_to">Welcome to</string>
    <string name="study_with_me">Study With Me.</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in">Log-in</string>

    <!-- Log-in Page -->
    <string name="welcome_back">Welcome Back!</string>
    <string name="ready_for_a_productive_day">Ready for a productive day?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- Sign-up Page -->
    <string name="study_with_me_subtitle">Study with me</string>
    <string name="create_a_username">Create a username</string>
    <string name="create_a_password">Create a password</string>
    <string name="sign_up">Sign-up</string>

    <!-- Home Page -->
    <string name="hello_user">Hello, %1$s!</string>
    <string name="start_studying">Start Studying</string>
    <string name="todays_tasks">Today\'s Tasks</string>
    <string name="nav_home">Home</string>
    <string name="nav_todo">To-do</string>
    <string name="nav_pomo">Pomo</string>
    <string name="nav_music">Music</string>
    <string name="nav_study">Study</string>
    <string name="settings">Settings</string>
    <string name="rainfall">♪ Rainfall</string>
    <string name="delete_button">delete button</string>


    <!-- To-do Page-->
    <string name="task_header">Tasks</string>
    <string name="new_task">New Task</string>
    <string name="task_name">Task</string>
    <string name="task_name_hint">Enter Task</string>
    <string name="details">Details</string>
    <string name="details_hint">Add Task Details</string>
    <string name="set_due_date">Set Date &amp; Time </string>
    <string name="set_date_hint">Select Date</string>
    <string name="set_time_hint">Select Time</string>
    <string name="repeat_hint">Does not repeat</string>
    <string name="label">Label</string>
    <string name="label_hint">My Tasks</string>
    <string name="new_list">New List</string>
    <string name="mark_completed">Mark Completed</string>

    <string name="save_button">Save</string>
<!--    <string-array name="view_options">-->
<!--        <item>List</item>-->
<!--        <item>Calendar</item>-->
<!--    </string-array>-->
<!--    <string-array name="task_types">-->
<!--        <item>Ongoing</item>-->
<!--        <item>All</item>-->
<!--        <item>Starred</item>-->
<!--        <item>Missed</item>-->
<!--        <item>Completed</item>-->
<!--    </string-array>-->
<!--    <string-array name="tasklists">-->
<!--        <item>All Tasks</item>-->
<!--        <item>My Tasks</item>-->
<!--        <item>Task List 1</item>-->
<!--    </string-array>-->    

    <!-- Course Page -->
    <string name="add_course">Add Course</string>
    <string name="course_title">Course Title</string>

    <!-- Decks Page -->
    <string name="decks_page">Decks</string>
    <string name="deck_favorite">Favorite</string>
    <string name="deck_name">Deck Name</string>
    <string name="deck_stat">%1$s | %2$d flashcards</string>
    <string name="deck_menu">Menu</string>
    <string name="add_deck">Title</string>
    <string name="shuffle_all">Shuffle all</string>

    <!-- Deck menu -->
    <string name="rename_deck">Rename</string>
    <string name="delete_deck">Delete</string>
    <string name="export_deck_txt">Export deck (.txt)</string>

    <!-- Flashcards page -->
    <string name="flashcards_page">Flashcards</string>
    <string name="back_decks">Back to Decks</string>
    <string name="filter_cards">Filter Cards</string>
    <string name="switch_view">Switch View</string>
    <string name="no_favcards">No favorite cards to display</string>
    <string name="flashcard_question">Question</string>
    <string name="flashcard_answer">Answer</string>
    <string name="flashcard_favorite">Favorite this card</string>
    <string name="flashcard_menu">Menu</string>
    <string name="add_cards">Add Card/s</string>
    <string name="clear">CLEAR</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="shuffle_deck">Shuffle deck</string>

    <!-- Flashcard options strings -->
    <string name="edit_flashcard">Edit</string>
    <string name="edit_flashcard_question">Question</string>
    <string name="edit_flashcard_answer">Answer</string>
    <string name="char_counter">%1$d / %2$d</string>
    <string name="delete_flashcard">Delete</string>
    <string name="copy_flashcard">Copy text</string>
    
    <!-- Web client id -->
    <string name="default_web_client_id">330230534714-p0gnnsieum1vhjgb7nqok0vvmnglot2v.apps.googleusercontent.com</string>
    <string name="ex_you_email_com">Ex. you@email.com</string>
    <string name="email">Email</string>
</resources>
