<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginBottom="20sp"
    android:background="@drawable/button_filled_background">

    <TextView
        android:id="@+id/deckTitleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/deck_name"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@+id/deckPlay"
        app:layout_constraintStart_toEndOf="@+id/favoriteDeck"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deckInfoTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/deck_stat"
        android:textColorLink="@color/text_primary"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/deckPlay"
        app:layout_constraintStart_toEndOf="@+id/favoriteDeck"
        app:layout_constraintTop_toBottomOf="@+id/deckTitleTv"
        tools:text="2025-06-28 | 0 flashcards" />

    <ImageButton
        android:id="@+id/deckOptions"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:buttonTint="@color/black"
        android:clickable="true"
        android:contentDescription="@string/flashcard_menu"
        android:focusable="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deckPlay"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:buttonTint="@color/black"
        android:clickable="true"
        android:contentDescription="@string/shuffle_deck"
        android:focusable="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deckOptions"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- FAVORITE DECK BUTTON -->
    <ImageButton
        android:id="@+id/favoriteDeck"
        android:layout_width="20dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:buttonTint="@color/black"
        android:clickable="true"
        android:contentDescription="@string/deck_favorite"
        android:focusable="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/ic_star_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deckTitleTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
