<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginBottom="20sp"
    android:background="@drawable/button_filled_background">

    <!-- QUESTION -->
    <TextView
        android:id="@+id/flashcardQuestion"
        android:text="@string/flashcard_question"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toStartOf="@id/favoriteCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ANSWER -->
    <TextView
        android:id="@+id/flashcardAnswer"
        android:text="@string/flashcard_answer"
        android:textColorLink="@color/text_primary"
        android:textSize="13sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toStartOf="@id/favoriteCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashcardQuestion" />

    <!-- FAVORITE CARD BUTTON -->
    <ImageButton
        android:id="@+id/favoriteCard"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:buttonTint="@color/black"
        android:clickable="true"
        android:contentDescription="@string/flashcard_favorite"
        android:focusable="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/ic_star_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/flashcard_options"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- OPTION BUTTON -->
    <ImageButton
        android:id="@+id/flashcard_options"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:buttonTint="@color/black"
        android:clickable="true"
        android:contentDescription="@string/flashcard_menu"
        android:focusable="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
